syntax="proto3";
option go_package = "github.com/kianyari/microservice-practice/common/api";
package api;

service JWTService {
  rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenResponse) {}
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}
message GenerateTokenRequest {
    string email = 1;
    string password = 2;
}
message GenerateTokenResponse {
    string token = 1;
    string message = 2;
}
message ValidateTokenRequest {
    string token = 1;
}
message ValidateTokenResponse {
    int32 id = 1;
    string message = 2;
}