syntax = "proto3";
option go_package = "github.com/kianyari/microservice-practice/proto";
package user;

service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}
message RegisterResponse {
  string message = 1;
}
message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string token = 1;
}